--- a/myPage.html
+++ b/myPage.html
@@ -61,12 +61,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./event.html">
                             <span class="menu_span">이벤트</span>
                         </a>
                     </li>
                     <li>
-                        <a href="" style="margin-left:5px;">
+                        <a href="./community.html" style="margin-left:5px;">
                             <span class="menu_span">커뮤니티</span>
                         </a>
                         <div class="gnb_menu_sub_wrap">
@@ -98,25 +98,25 @@
                 <ul>
                     <a href="#">
                         <li class="left_wrap_btn">
-                            <span class="select_btn">예매내역</span>
+                            <span>예매내역</span>
                         </li>
                     </a>
-                    <a href="./help_faq.html">
+                    <a href="./myPage_cancel.html">
                         <li class="left_wrap_btn">
                             <span>환불/취소내역</span>
                         </li>
                     </a>
-                    <a href="./help_qna.html">
+                    <a href="./fix_myPage.html">
                         <li class="left_wrap_btn">
                             <span>회원정보수정</span>
                         </li>
                     </a>
-                    <a href="./help_qna.html">
+                    <a href="#">
                         <li class="left_wrap_btn">
                             <span>활동관리</span>
                         </li>
                     </a>
-                    <a href="./help_qna.html">
+                    <a href="#">
                         <li class="left_wrap_btn">
                             <span>회원탈퇴</span>
                         </li>
