--- a/community.html
+++ b/community.html
@@ -70,7 +70,7 @@
                         </ul>
                     </li> -->
                     <li>
-                        <a href="">
+                        <a href="./event.html">
                             <span class="menu_span">이벤트</span>
                         </a>
                     </li>
