--- a/fix_myPage.html
+++ b/fix_myPage.html
@@ -14,7 +14,7 @@
     <!-- 스타일시트 -->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mypage.css">
+    <link rel="stylesheet" href="./css/fix_mypage.css">
     <!-- 제이쿼리 -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <!-- bx slider -->
@@ -84,9 +84,8 @@
                         </a>
                     </li>
                 </ul>
-                <div class="search_box"
-                    style="float: right; margin-top: -30px; border-color: 1px solid #fff!important;">
-                    <input type="text" style="padding: 0 10px; border-radius: 20px;" placeholder="찾으실 공연을 입력해주세요.">
+                <div class="search_box">
+                    <input type="text" placeholder="찾으실 공연을 입력해주세요.">
                 </div>
             </div>
         </div>
@@ -96,17 +95,17 @@
             <div class="left_wrap">
                 <p>MyPage</p>
                 <ul>
-                    <a href="myPage.html">
+                    <a href="./myPage.html">
                         <li class="left_wrap_btn">
                             <span>예매내역</span>
                         </li>
                     </a>
-                    <a href="#">
+                    <a href="./myPage_cancel.html">
                         <li class="left_wrap_btn">
                             <span>환불/취소내역</span>
                         </li>
                     </a>
-                    <a href="./fix_myPage.html">
+                    <a href="#">
                         <li class="left_wrap_btn">
                             <span>회원정보수정</span>
                         </li>
@@ -125,51 +124,16 @@
             </div>
             <div class="right_wrap">
                 <p class="right_title">
-                    예매내역
+                    회원정보수정
                 </p>
                 <div class="right_list">
                     <div class="reserve_wrap">
-                        <div class="buy_info_top">
-                            <span>입금기한 초과</span>
-                            <span style="float: right;">2023-02-01</span>
-                        </div>
-                        <div class="buy_info_detail">
-                            <div class="buy_info_img">
-                                <a href="">
-                                    <img src="https://timeticket.co.kr/wys2/file_attach_thumb/2022/01/27/1643271898-98-0_wonbon_N_7_226x316_90_2.jpg"
-                                        alt="공연 썸네일">
-                                </a>
-                            </div>
-                            <div class="buy_info_txt">
-                                <div class="buy_info_txt_title">
-                                    <a href="">한 뼘 사이</a>
-                                </div>
-                                <div class="buy_info_txt_date">
-                                    2.02[목] 19:30 일반 (1매)
-                                    <br>
-                                </div>
-                                <div class="buy_info_txt_cnt">
-                                    총 1매 / 13,500원
-                                </div>
-                                <div class="buy_info_txt_how">
-                                    무통장입금
-                                </div>
-                                <div class="buy_info_txt_can" style="color: rgba(255, 0, 0, 0.8);">
-                                    입금기한(신청 후 24시간)초과 - 자동 취소
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list_pager">
-                        <button class="btn_pager first hidden" type="button" onclick="">처음</button>
-                        <button class="btn_pager prev hidden" type="button" onclick="">이전</button>
-                        <ul>
-                            <li>
-                                <a href="" title="1 페이지 선택" class="on">1</a>
-                            </li>
-                        </ul>
-                        <button class="btn_pager next hidden" type="button" onclick="">다음</button>
-                        <button class="btn_pager end hidden" type="button" onclick="">끝</button>
+                        <span>
+                            비밀번호를 입력해주세요.
+                        </span>
+                        <input type="password" class="pwd_chk input_box" name="pwd_chk" onkeyup="chkpwd();" size=15
+                            placeholder="비밀번호 입력">
+                        <button type="submit">확인</button>
                     </div>
                 </div>
             </div>
