--- a/help_faq.html
+++ b/help_faq.html
@@ -70,12 +70,12 @@
                         </ul>
                     </li> -->
                     <li>
-                        <a href="">
+                        <a href="./event.html">
                             <span class="menu_span">이벤트</span>
                         </a>
                     </li>
                     <li>
-                        <a href="" style="margin-left:5px;">
+                        <a href="./community.html" style="margin-left:5px;">
                             <span class="menu_span">커뮤니티</span>
                         </a>
                         <div class="gnb_menu_sub_wrap">
