회원정보수정, 회원탈퇴 페이지 작성, 기타 여러가지 수정

--- a/community.html
+++ b/community.html
@@ -60,42 +60,32 @@
                             <span class="menu_span">공연</span>
                         </a>
                     </li>
-                    <!-- <li>
-                        <a href="">예매</a>
-                        <ul class="depth2" style="display: none; height: 200px;">
-                            <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">지역별 예매</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">공연별 예매</a>
-                            </li>
-                        </ul>
-                    </li> -->
                     <li>
                         <a href="./event.html">
                             <span class="menu_span">이벤트</span>
                         </a>
                     </li>
                     <li>
-                        <a href="" style="margin-left:5px;">
+                        <a href="./community.html">
                             <span class="menu_span">커뮤니티</span>
                         </a>
                         <div class="gnb_menu_sub_wrap">
                             <ul class="gnb_menu_sub">
-                                <li><a href="#" target="_self">자유게시판</a></li>
-                                <li><a href="#" target="_self">극단원 모집</a></li>
-                                <li><a href="#" target="_self">오디션 정보</a></li>
-                                <li><a href="#" target="_self">새 공연 소식</a></li>
+                                <li><a href="./community.html">자유게시판</a></li>
+                                <li><a href="#">극단원 모집</a></li>
+                                <li><a href="#">오디션 정보</a></li>
+                                <li><a href="#">새 공연 소식</a></li>
                             </ul>
                         </div>
                     </li>
-                    <li style="">
-                        <a href="./help.html" style="display: block; margin-left: 15px;">
+                    <li>
+                        <a href="./help.html">
                             <span class="menu_span">공지사항</span>
                         </a>
                     </li>
                 </ul>
-                <div class="search_box"
-                    style="float: right; margin-top: -30px; border-color: 1px solid #fff!important;">
-                    <input type="text" style="padding: 0 10px; border-radius: 20px;">
+                <div class="search_box">
+                    <input type="text" placeholder="찾으실 공연을 입력해주세요.">
                 </div>
             </div>
         </div>
@@ -110,17 +100,17 @@
                             <span class="select_btn">자유게시판</span>
                         </li>
                     </a>
-                    <a href="./help_faq.html">
+                    <a href="#">
                         <li class="left_wrap_btn">
                             <span>극단원 모집</span>
                         </li>
                     </a>
-                    <a href="./help_qna.html">
+                    <a href="#">
                         <li class="left_wrap_btn">
                             <span>오디션 정보</span>
                         </li>
                     </a>
-                    <a href="./help_qna.html">
+                    <a href="#">
                         <li class="left_wrap_btn">
                             <span>새 공연 소식</span>
                         </li>
