--- a/myPage.html
+++ b/myPage.html
@@ -66,27 +66,26 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./community.html" style="margin-left:5px;">
+                        <a href="./community.html">
                             <span class="menu_span">커뮤니티</span>
                         </a>
                         <div class="gnb_menu_sub_wrap">
                             <ul class="gnb_menu_sub">
-                                <li><a href="#" target="_self">자유게시판</a></li>
-                                <li><a href="#" target="_self">극단원 모집</a></li>
-                                <li><a href="#" target="_self">오디션 정보</a></li>
-                                <li><a href="#" target="_self">새 공연 소식</a></li>
+                                <li><a href="./community.html">자유게시판</a></li>
+                                <li><a href="#">극단원 모집</a></li>
+                                <li><a href="#">오디션 정보</a></li>
+                                <li><a href="#">새 공연 소식</a></li>
                             </ul>
                         </div>
                     </li>
-                    <li style="">
-                        <a href="./help.html" style="display: block; margin-left: 15px;">
+                    <li>
+                        <a href="./help.html">
                             <span class="menu_span">공지사항</span>
                         </a>
                     </li>
                 </ul>
-                <div class="search_box"
-                    style="float: right; margin-top: -30px; border-color: 1px solid #fff!important;">
-                    <input type="text" style="padding: 0 10px; border-radius: 20px;" placeholder="찾으실 공연을 입력해주세요.">
+                <div class="search_box">
+                    <input type="text" placeholder="찾으실 공연을 입력해주세요.">
                 </div>
             </div>
         </div>
@@ -116,7 +115,7 @@
                             <span>활동관리</span>
                         </li>
                     </a>
-                    <a href="#">
+                    <a href="./quit_member.html">
                         <li class="left_wrap_btn">
                             <span>회원탈퇴</span>
                         </li>
