--- a/fix_myPage.html
+++ b/fix_myPage.html
@@ -66,20 +66,20 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./community.html" style="margin-left:5px;">
+                        <a href="./community.html">
                             <span class="menu_span">커뮤니티</span>
                         </a>
                         <div class="gnb_menu_sub_wrap">
                             <ul class="gnb_menu_sub">
-                                <li><a href="#" target="_self">자유게시판</a></li>
-                                <li><a href="#" target="_self">극단원 모집</a></li>
-                                <li><a href="#" target="_self">오디션 정보</a></li>
-                                <li><a href="#" target="_self">새 공연 소식</a></li>
+                                <li><a href="./community.html">자유게시판</a></li>
+                                <li><a href="#">극단원 모집</a></li>
+                                <li><a href="#">오디션 정보</a></li>
+                                <li><a href="#">새 공연 소식</a></li>
                             </ul>
                         </div>
                     </li>
-                    <li style="">
-                        <a href="./help.html" style="display: block; margin-left: 15px;">
+                    <li>
+                        <a href="./help.html">
                             <span class="menu_span">공지사항</span>
                         </a>
                     </li>
@@ -115,7 +115,7 @@
                             <span>활동관리</span>
                         </li>
                     </a>
-                    <a href="#">
+                    <a href="./quit_member.html">
                         <li class="left_wrap_btn">
                             <span>회원탈퇴</span>
                         </li>
