--- a/help_new_qna.html
+++ b/help_new_qna.html
@@ -61,43 +61,32 @@
                             <span class="menu_span">공연</span>
                         </a>
                     </li>
-                    <!-- <li>
-                        <a href="">예매</a>
-                        <ul class="depth2" style="display: none; height: 200px;">
-                            <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">지역별 예매</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">공연별 예매</a>
-                            </li>
-                        </ul>
-                    </li> -->
                     <li>
                         <a href="./event.html">
                             <span class="menu_span">이벤트</span>
                         </a>
                     </li>
                     <li>
-                        <a href="./community.html" style="margin-left:5px;">
+                        <a href="./community.html">
                             <span class="menu_span">커뮤니티</span>
                         </a>
                         <div class="gnb_menu_sub_wrap">
                             <ul class="gnb_menu_sub">
-                                <li><a href="#" target="_self">자유게시판</a></li>
-                                <li><a href="#" target="_self">극단원 모집</a></li>
-                                <li><a href="#" target="_self">오디션 정보</a></li>
-                                <li><a href="#" target="_self">새 공연 소식</a></li>
+                                <li><a href="./community.html">자유게시판</a></li>
+                                <li><a href="#">극단원 모집</a></li>
+                                <li><a href="#">오디션 정보</a></li>
+                                <li><a href="#">새 공연 소식</a></li>
                             </ul>
                         </div>
-
                     </li>
-                    <li style="">
-                        <a href="./help.html" style="display: block; margin-left: 15px;">
+                    <li>
+                        <a href="./help.html">
                             <span class="menu_span">공지사항</span>
                         </a>
                     </li>
                 </ul>
-                <div class="search_box"
-                    style="float: right; margin-top: -30px; border-color: 1px solid #fff!important;">
-                    <input type="text" style="padding: 0 10px; border-radius: 20px;">
+                <div class="search_box">
+                    <input type="text" placeholder="찾으실 공연을 입력해주세요.">
                 </div>
             </div>
         </div>
@@ -181,8 +170,8 @@
                             <span> ※ 문의에 대한 빠른 답변을 위해 회원 가입 시
                                 입력하신
                                 연락처를 확인해주세요.</span>
-                            <a href="./myPage.html">
-                                <div class="write_btn">
+                            <a href="./fix_myPage.html">
+                                <div class="write_btn" style="width:55px; height: 30px; line-height: 30px;">
                                     수정
                                 </div>
                             </a>
@@ -210,7 +199,8 @@
                                         <td
                                             style="width: 85%; display:block;float: right; border-bottom: 1px solid #e2e2e2; height: 65px; padding: 18px 10px 20px 10px;">
                                             <input type="text" id="inp_title" name="inp_title"
-                                                style="width:100%; border:1px solid #e2e2e2; height: 30px; padding: 10px 5px;">
+                                                style="width:100%; border:1px solid #e2e2e2; height: 30px; padding: 10px 10px;"
+                                                placeholder="제목을 입력해주세요.">
                                         </td>
                                     </tr>
                                     <tr>
