--- a/join.html
+++ b/join.html
@@ -40,21 +40,21 @@
     </div>
 
     <div class="container" style="position:relative;">
-        <form name="signupForm" style="">
+        <form name="signupForm">
             <input type="hidden" id="isUser" name="isUser" value="F">
             <input type="hidden" id="duinfo" name="duinfo">
             <input type="hidden" name="idKey" id="idKey">
             <div class="join_row">
                 <h6>아이디</h6>
                 <input type="text" id="user_id" class="uid input_txt" name="user_id" size=15 onchange="changeid();"
-                    placeholder="4~15자 이내로 입력해주세요" style="">
+                    placeholder="4~15자 이내로 입력해주세요">
                 <input type="hidden" name="chkid" value="0">
             </div>
             <div class="input_alert_id" style="color: red;"></div>
-            <div class="join_row" style="">
+            <div class="join_row">
                 <h6>비밀번호</h6>
                 <input type="password" id="user_pass" class="pwd input_txt" name="user_pass" onkeyup="chkpwd();" size=15
-                    placeholder="영문, 숫자 조합" style="">
+                    placeholder="영문, 숫자 조합">
                 <div class="input_alert_pw"></div>
                 <h6>비밀번호 재확인</h6>
                 <input type="password" class="pwd_chk input_box" name="pwd_chk" onkeyup="chkpwd();" size=15
@@ -71,59 +71,32 @@
                 <h6>닉네임</h6>
                 <input type="text" class="name input_box" name="name" size=15 placeholder="10자 이하로 입력해주세요">
             </div>
-            <div class=email_position style="">
+            <div class=email_position>
                 <div class=email_position1>
                     <h6>이메일</h6>
-                    <input type="text" class="email_fr input_box" name="email_fr" size=15 placeholder="abcde@naver.com"
-                        style="">
+                    <input type="text" class="email_fr input_box" name="email_fr" size=15 placeholder="abcde@naver.com">
                 </div>
                 <div class=email_mark>
                 </div>
             </div>
             <input type="hidden" class="email" name="email">
-            <div class=phone_position style="">
+            <div class=phone_position>
                 <h6>휴대폰</h6>
-                <input type="text" class="phone_num input_box" name="phone_num" size=15 placeholder="010-" style="">
+                <input type="text" class="phone_num input_box" name="phone_num" size=15 placeholder="010-">
                 <button type="submit" class="phone_send" onClick="">인증번호 받기</button>
                 <div class="phone_confirm">
-                    <input type="tel" name="phone_con" id="phone_con" placeholder="인증번호를 입력하세요">
+                    <input type="tel" name="phone_con" id="phone_con" placeholder="인증번호를 입력해주세요">
                 </div>
                 <div class=phone_mark>
                 </div>
             </div>
-            <!-- <div class="per_info">
-                <div class="jumin1">
-                    <h6>주민번호</h6>
-                    <input type="text" class="jumin_num1 input_box" name="jumin_num1" maxlength=6 size=10
-                        placeholder="주민번호 앞 6자리" style="width: 45%; float: left;">
-                    <span style="position:absolute; font-size: 25px; margin-left: 15px;">-</span>
-                </div>
-                <div class="jumin2">
-                </div>
-                <div class="jumin3" style="margin-bottom: 10px;">
-                    <input type="password" class="jumin_num2 input_box" name="jumin_num2" maxlength=7 size=10
-                        placeholder="주민번호 뒷 7자리" style="width: 45%; float: right;">
-                </div>
-                <input type="hidden" class="jumin_num" name="jumin_num">
-            </div> -->
             <div class="confirm_box" style="margin-top: 5px;">
-                <button type="submit" class="" onClick="checkForm()">가입하기</button>
+                <button type="submit" class="" onClick="checkForm()"
+                    onclick="javascript:alert('회원가입이 완료되었습니다!.');">가입하기</button>
             </div>
         </form>
     </div>
-    </div>
-    <footer style="width: 980px; margin:0 auto;">
-        <!-- <a href=" /" style="width: 150px;">
-            <img class="logo" src="./img/logo_join2.png" alt="로고">
-        </a>
-        <div class="company_info">
-            <address>(08368)서울특별시 구로구 항동 171-4, 하버라인 3단지 309동 101호</address>
-            <address>(08368)경기도 수원시 수원역</address>
-            <d1>
-                <dt>Ticatcher</dt>
-                <dt>Tel : 010-9074-1056</dt>
-            </d1>
-        </div> -->
+    <footer>
     </footer>
 </body>
 
