--- a/notice.html
+++ b/notice.html
@@ -14,7 +14,7 @@
     <!-- 스타일시트 -->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mypage.css">
+    <link rel="stylesheet" href="./css/notice.css">
     <!-- 제이쿼리 -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <!-- bx slider -->
@@ -93,89 +93,57 @@
     <div class="container">
         <div class="contents">
             <div class="left_wrap">
-                <p>MyPage</p>
+                <p>고객센터</p>
                 <ul>
-                    <a href="myPage.html">
+                    <a href="./help.html">
                         <li class="left_wrap_btn">
-                            <span>예매내역</span>
+                            <span class="select_btn">공지사항</span>
                         </li>
                     </a>
-                    <a href="#">
+                    <a href="./help_faq.html">
                         <li class="left_wrap_btn">
-                            <span>환불/취소내역</span>
+                            <span>자주 찾는 질문</span>
                         </li>
                     </a>
-                    <a href="./fix_myPage.html">
+                    <a href="./help_new_qna.html">
                         <li class="left_wrap_btn">
-                            <span>회원정보수정</span>
+                            <span>1:1 문의</span>
                         </li>
                     </a>
-                    <a href="#">
+                    <a href="./help_qna.html">
                         <li class="left_wrap_btn">
-                            <span>활동관리</span>
-                        </li>
-                    </a>
-                    <a href="./quit_member.html">
-                        <li class="left_wrap_btn">
-                            <span>회원탈퇴</span>
+                            <span>1:1 문의내역</span>
                         </li>
                     </a>
                 </ul>
             </div>
             <div class="right_wrap">
                 <p class="right_title">
-                    예매내역
+                    공지사항
                 </p>
                 <div class="right_list">
-                    <div class="reserve_wrap">
-                        <div class="buy_info_top">
-                            <span>입금기한 초과</span>
-                            <span style="float: right;">2023-02-01</span>
-                        </div>
-                        <div class="buy_info_detail">
-                            <div class="buy_info_img">
-                                <a href="">
-                                    <img src="https://timeticket.co.kr/wys2/file_attach_thumb/2022/01/27/1643271898-98-0_wonbon_N_7_226x316_90_2.jpg"
-                                        alt="공연 썸네일">
-                                </a>
-                            </div>
-                            <div class="buy_info_txt">
-                                <div class="buy_info_txt_title">
-                                    <a href="">한 뼘 사이</a>
-                                </div>
-                                <div class="buy_info_txt_date">
-                                    2.02[목] 19:30 일반 (1매)
-                                    <br>
-                                </div>
-                                <div class="buy_info_txt_cnt">
-                                    총 1매 / 13,500원
-                                </div>
-                                <div class="buy_info_txt_how">
-                                    무통장입금
-                                </div>
-                                <div class="buy_info_txt_can" style="color: rgba(255, 0, 0, 0.8);">
-                                    입금기한(신청 후 24시간)초과 - 자동 취소
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list_pager">
-                        <button class="btn_pager first hidden" type="button" onclick="">처음</button>
-                        <button class="btn_pager prev hidden" type="button" onclick="">이전</button>
-                        <ul>
-                            <li>
-                                <a href="" title="1 페이지 선택" class="on">1</a>
-                            </li>
+                    <div class="notice_wrap">
+                        <ul class="notice_header">
+                            <li>이것만 공지 연결함</li>
+                            <li>2023-01-01</li>
                         </ul>
-                        <button class="btn_pager next hidden" type="button" onclick="">다음</button>
-                        <button class="btn_pager end hidden" type="button" onclick="">끝</button>
+                        <div class="notice_body">
+                            여기에 내용이 들어간다.
+                        </div>
                     </div>
+                </div>
+                <div>
+                    <a href="./help.html">
+                        <div class="write_btn">
+                            목록
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
     <footer>
-        <a href="./index.html">
+        <a href=" /">
             <img class="logo" src="./img/logo.png" alt="로고" style="width:150px;">
         </a>
         <div class="all_company">
